Bug 205446 - tools/regression/lib/msun/test-ctrig.t fails on i386, but not on amd64
Summary: tools/regression/lib/msun/test-ctrig.t fails on i386, but not on amd64
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: tests (show other bugs)
Version: 10.2-STABLE
Hardware: i386 Any
: --- Affects Some People
Assignee: freebsd-testing (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-20 04:02 UTC by Enji Cooper
Modified: 2017-09-26 09:03 UTC (History)
2 users (show)

See Also:
ngie: mfc-stable11+
ngie: mfc-stable10-
ngie: mfc-stable9-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enji Cooper freebsd_committer freebsd_triage 2015-12-20 04:02:49 UTC
Some of the subtests fail on i386, but not amd64:

$ cd tools/regression/lib/msun/
$ prove -rv test-ctrig.t 
test-ctrig.t .. Assertion failed: (cfpequal_tol((ctanh)(_d), ( ((long double _Complex){ 1.0, -1.62994325413993477997492170229268382e-26L })), ( ldexpl(1.0, 1 - 53)), FPE_ABS_ZERO)), function test_large, file test-ctrig.c, line 433.

1..6
ok 1 - ctrig zero
ok 2 - ctrig nan
ok 3 - ctrig inf
0x1.921fb54442d18p-1 0x0p+0
0x1.4fc442p-1 0x0p+0
0x1.4fc444p-1
0x1.921fb54442d18p+0 0x0p+0
0x1.d594fep-1 0x0p+0
0x1.d595p-1
0x1.2d97c7f3321d2p+1 0x0p+0
0x1.f6e20cp-1 0x0p+0
0x1.f6e20ep-1
0x1.f6a7a2955385ep+1 0x0p+0
0x1.ff9a46p-1 0x0p+0
0x1.ff9a48p-1
0x1.2d97c7f3321d2p+2 0x0p+0
0x1.ffead8p-1 0x0p+0
0x1.ffeadap-1
0x1.5fdbbe9bba775p+2 0x0p+0
0x1.fffb9ap-1 0x0p+0
0x1.fffb9cp-1
ok 4 - ctrig axes
ok 5 - ctrig small
Failed 1/6 subtests 

Test Summary Report
-------------------
test-ctrig.t (Wstat: 134 Tests: 5 Failed: 0)
  Non-zero wait status: 134
  Parse errors: Bad plan.  You planned 6 tests but ran 5.
Files=1, Tests=5,  1 wallclock secs ( 0.02 usr  0.01 sys +  0.00 cusr  0.04 csys =  0.07 CPU)
Result: FAIL

431         z = CMPLXL(30, 0x1p1023L);
432         test_odd_tol(ctanh, z,
433                      CMPLXL(1.0, -1.62994325413993477997492170229268382e-26L),
434                      DBL_ULP());
435         z = CMPLXL(1, 0x1p1023L);
436         test_odd_tol(ctanh, z,
437                      CMPLXL(0.878606311888306869546254022621986509L,
438                             -0.225462792499754505792678258169527424L),
439                      DBL_ULP());

A workaround to enable this test on i386 is coming soon.
Comment 1 Enji Cooper freebsd_committer freebsd_triage 2015-12-20 04:04:17 UTC
Other notes: it fails on stable/10, current, not sure about stable/9..
Comment 2 commit-hook freebsd_committer freebsd_triage 2015-12-20 04:06:45 UTC
A commit references this bug:

Author: ngie
Date: Sun Dec 20 04:06:31 UTC 2015
New revision: 292489
URL: https://svnweb.freebsd.org/changeset/base/292489

Log:
  Disable test-ctrig.t testcases which fail assertions on i386

  Tested on: stable/10 (amd64/i386), head (amd64/i386)
  PR: 205446
  MFC after: 1 week
  X-MFC to: stable/10
  Sponsored by: EMC / Isilon Storage Division

Changes:
  head/tools/regression/lib/msun/test-ctrig.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2015-12-20 04:18:47 UTC
A commit references this bug:

Author: ngie
Date: Sun Dec 20 04:17:54 UTC 2015
New revision: 292491
URL: https://svnweb.freebsd.org/changeset/base/292491

Log:
  Disable test-ctrig.t testcases which fail assertions on i386 [*]

  Also, don't compile the exp2l(3) testcases on platforms that don't support the
  libcall (technically only x86 right now). This makes this test buildable on
  arm*/mips*/powerpc*

  Tested on: stable/10 (amd64/i386), head (amd64/i386)
  PR: 205446 [*]
  MFC after: 1 week
  X-MFC to: stable/10
  Sponsored by: EMC / Isilon Storage Division

Changes:
  head/tools/regression/lib/msun/test-exponential.c
Comment 4 commit-hook freebsd_committer freebsd_triage 2015-12-27 20:55:35 UTC
A commit references this bug:

Author: ngie
Date: Sun Dec 27 20:54:48 UTC 2015
New revision: 292795
URL: https://svnweb.freebsd.org/changeset/base/292795

Log:
  MFC r292491,r292493,r292496:

  r292491:

  Disable test-ctrig.t testcases which fail assertions on i386 [*]

  Also, don't compile the exp2l(3) testcases on platforms that don't support the
  libcall (technically only x86 right now). This makes this test buildable on
  arm*/mips*/powerpc*

  Tested on: stable/10 (amd64/i386), head (amd64/i386)
  PR: 205446 [*]
  X-MFC to: stable/10
  Sponsored by: EMC / Isilon Storage Division

  r292493:

  Don't run test-fma on i386

  It completely fails all assertions on i386 on both stable/9 and stable/10

  PR: 205448
  X-MFC to: stable/10
  Sponsored by: EMC / Isilon Storage Division

  r292496:

  Skip the testcases on i386 (all the assertions fail) [*]

  Also, don't compile the ldexpl(3) testcases on platforms that don't support
  the libcall (technically only x86 right now). This makes this test buildable on
  arm*/mips*/powerpc*

  PR: 205449 [*]
  Tested on: stable/10 (amd64/i386), head (amd64/i386)
  Sponsored by: EMC / Isilon Storage Division

Changes:
_U  stable/10/
  stable/10/tools/regression/lib/msun/test-exponential.c
  stable/10/tools/regression/lib/msun/test-invtrig.c
Comment 5 commit-hook freebsd_committer freebsd_triage 2015-12-27 21:17:41 UTC
A commit references this bug:

Author: ngie
Date: Sun Dec 27 21:17:30 UTC 2015
New revision: 292801
URL: https://svnweb.freebsd.org/changeset/base/292801

Log:
  MFC r292489:

  Disable test-ctrig.t testcases which fail assertions on i386

  Tested on: stable/10 (amd64/i386), head (amd64/i386)
  PR: 205446
  X-MFC to: stable/10
  Sponsored by: EMC / Isilon Storage Division

Changes:
_U  stable/10/
  stable/10/tools/regression/lib/msun/test-ctrig.c
Comment 6 commit-hook freebsd_committer freebsd_triage 2015-12-27 21:34:43 UTC
A commit references this bug:

Author: ngie
Date: Sun Dec 27 21:34:37 UTC 2015
New revision: 292802
URL: https://svnweb.freebsd.org/changeset/base/292802

Log:
  MFstable/10 r292795:

  MFC r292491,r292493,r292496:

  r292491:

  Disable test-ctrig.t testcases which fail assertions on i386 [*]

  Also, don't compile the exp2l(3) testcases on platforms that don't support the
  libcall (technically only x86 right now). This makes this test buildable on
  arm*/mips*/powerpc*

  Tested on: stable/10 (amd64/i386), head (amd64/i386)
  PR: 205446 [*]
  X-MFC to: stable/10
  Sponsored by: EMC / Isilon Storage Division

  r292493:

  Don't run test-fma on i386

  It completely fails all assertions on i386 on both stable/9 and stable/10

  PR: 205448
  X-MFC to: stable/10
  Sponsored by: EMC / Isilon Storage Division

  r292496:

  Skip the testcases on i386 (all the assertions fail) [*]

  Also, don't compile the ldexpl(3) testcases on platforms that don't support
  the libcall (technically only x86 right now). This makes this test buildable on
  arm*/mips*/powerpc*

  PR: 205449 [*]
  Tested on: stable/10 (amd64/i386), head (amd64/i386)
  Sponsored by: EMC / Isilon Storage Division

Changes:
_U  stable/9/
_U  stable/9/tools/
_U  stable/9/tools/regression/
  stable/9/tools/regression/lib/msun/test-exponential.c
  stable/9/tools/regression/lib/msun/test-invtrig.c
Comment 7 commit-hook freebsd_committer freebsd_triage 2016-09-02 08:17:56 UTC
A commit references this bug:

Author: ngie
Date: Fri Sep  2 08:17:44 UTC 2016
New revision: 305283
URL: https://svnweb.freebsd.org/changeset/base/305283

Log:
  Skip :test_large on i386

  More assertions are failing on ^/head now.

  PR:	205446
  Sponsored by:	EMC / Isilon Storage Division

Changes:
  head/lib/msun/tests/ctrig_test.c
Comment 8 commit-hook freebsd_committer freebsd_triage 2017-03-09 06:57:49 UTC
A commit references this bug:

Author: ngie
Date: Thu Mar  9 06:56:44 UTC 2017
New revision: 314950
URL: https://svnweb.freebsd.org/changeset/base/314950

Log:
  Don't expect :test_large_inputs to fail with i386 anymore

  Recent changes (maybe a side-effect of the ATF-ification in r314649)
  invalidate the failure expectation.

  PR:		205446
  MFC after:	1 week
  Sponsored by:	Dell EMC Isilon

Changes:
  head/lib/msun/tests/ctrig_test.c
Comment 9 commit-hook freebsd_committer freebsd_triage 2017-03-12 04:40:15 UTC
A commit references this bug:

Author: ngie
Date: Sun Mar 12 04:40:02 UTC 2017
New revision: 315118
URL: https://svnweb.freebsd.org/changeset/base/315118

Log:
  MFC r305283,r314649:

  r305283:

  Skip :test_large on i386

  More assertions are failing on ^/head now.

  PR:	205446

  r314649:

  Convert lib/msun/ctrig_test from TAP to ATF

  This is being done as a precursor for work needed to annontate failing
  testcases with clang 4.0+.

  PR:	217528

Changes:
_U  stable/11/
  stable/11/lib/msun/tests/Makefile
  stable/11/lib/msun/tests/ctrig_test.c
Comment 10 Enji Cooper freebsd_committer freebsd_triage 2017-03-12 04:48:24 UTC
Not bothering to MFC this to 10 because it's not failing there, and introducing the ATFifation exposes bugs in the test that don't happen in the TAP version (which are helpful in finding issues with both versions, but shouldn't be employed anywhere yet).
Comment 11 commit-hook freebsd_committer freebsd_triage 2017-09-26 09:03:29 UTC
A commit references this bug:

Author: dim
Date: Tue Sep 26 09:02:00 UTC 2017
New revision: 324006
URL: https://svnweb.freebsd.org/changeset/base/324006

Log:
  Synchronize most of libm with head as of r323004.  This excludes a few
  arch-specific updates for powerpcspe, mips and riscv, for which support
  has not been merged yet.

  Bump __FreeBSD_version for the addition of cacoshl, cacosl, casinhl,
  casinl, catanl, catanhl, sincos, sincosf, and sincosl.

  MFC r305382 (by bde):

    Add asm versions of fmod(), fmodf() and fmodl() on amd64.  Add asm
    versions of fmodf() amd fmodl() on i387.

    fmod is similar to remainder, and the C versions are 3 to 9 times
    slower than the asm versions on x86 for both, but we had the strange
    mixture of all 6 variants of remainder in asm and only 1 of 6
    variants of fmod in asm.

  MFC r305384 (by bde):

    Disconnect the "optimized" asm variants of cos(), sin() and tan() from
    the build on i386.  Leave them in the source tree for regression tests.

    The asm functions were always much less accurate (by a factor of more
    than 10**18 in the worst case).  They were faster on old CPUs.  But
    with each new generation of CPUs they get relatively slower.  The
    double precision C version's average advantage is about a factor of 2
    on Haswell.

    The asm functions were already intentionally avoided in float and long
    double precision on i386 and in all precisions on amd64.  Float
    precision and amd64 give larger advantages to the C version.  The long
    double precision C code and compilers' understanding of long double
    precision are not so good, so the i387 is still slightly faster for
    long double precision, except for the unimportant subcase of huge args
    where the sub-optimal C code now somehow beats the i387 by about a
    factor of 2.

  MFC r305385 (by bde):

    Oops, the previous i386 version of e_fmodf.S and e_fmodl.S was
    actually the amd64 version.

  MFC r306409 (by emaste):

    libm: fix some unused variable (rcsid) and dangling else warnings

    s_{fabs,fmax,logb,scalb}{,f,l}.c may be built elsewhere with a higher
    WARNS setting.

    Reviewed by:	ed
    Sponsored by:	The FreeBSD Foundation
    Differential Revision:	https://reviews.freebsd.org/D8061

  MFC r306410 (by emaste):

    libm: simplify i387 subdir logic with make's :S substitution

  MFC r306527 (by emaste):

    libm: remove unused variables for LDBL_MANT_DIG != 113

    Sponsored by:	The FreeBSD Foundation

  MFC r306709 (by emaste):

    libm: remove unused variables

    Sponsored by:	The FreeBSD Foundation

  MFC r307066 (by br):

    Don't use fmaxl/fminl on platforms with no long double support,
    use fmax/fmin instead.

    This fixes fmaxmin test failure on MIPS64.

    Reviewed by:	emaste
    Sponsored by:	DARPA, AFRL
    Sponsored by:	HEIF5
    Differential Revision:	https://reviews.freebsd.org/D8216

  MFC r308172 (by emaste):

    libm: add braces around initialization of subobjects

    This cleans up a warning when building libm at higher WARNS levels and
    makes the intent more clear. By the C standard the values are assigned
    to subobject members in order so this change introduces no functional
    change. (6.7.9 20)

    Reviewed by:	kib
    Sponsored by:	The FreeBSD Foundation
    Differential Revision:	https://reviews.freebsd.org/D8333

  MFC r313761 (by mmokhi):

    Add casinl() cacosl() catanl() casinhl() cacoshl() catanhl() APIs to msun
    to improve C11 conformance.

    PR:		216850 216851 216852 216856 216857 216858
    Submitted by:	mmokhi
    Reported by:	sgk@troutmask.apl.washington.edu
    Reviewed by:	bde, mat, theraven
    Approved by:	bde (src committer), mat (mentor)
    Differential Revision:	https://reviews.freebsd.org/D9491

  MFC r313863 (by mmokhi):

    Fix building of r313761 on platforms that
    `long double` is alias of `double` (MIPS, etc)

    PR:		216850 216851 216852 216856 216857 216858
    Reported by:	emsate
    Reviewed by:	bde emaste hselasky
    Approved by:	bde emaste hselasky
    Differential Revision:	https://reviews.freebsd.org/D9491

  MFC r313864 (by mmokhi):

    Add documentations related to new APIs of r313761

    PR:		216850 216851 216852 216856 216857 216858
    Submitted by:	sgk@troutmask.apl.washington.edu
    Reported by:	sgk@troutmask.apl.washington.edu
    Reviewed by:	bde emaste hselasky
    Approved by:	bde emaste hselasky
    Differential Revision:	https://reviews.freebsd.org/D9491

  MFC r314950 (by ngie):

    Don't expect :test_large_inputs to fail with i386 anymore

    Recent changes (maybe a side-effect of the ATF-ification in r314649)
    invalidate the failure expectation.

    PR:		205446
    Sponsored by:	Dell EMC Isilon

  MFC r317349 (by pfg):

    msun: Remove trailing space in Sunsoft copyright statement.

    Submittedby:	kargl

  MFC r319047 (by mmel):

    Implement sincos, sincosf, and sincosl.
    The primary benefit of these functions is that argument
    reduction is done once instead of twice in independent
    calls to sin() and cos().

    * lib/msun/Makefile:
      . Add s_sincos[fl].c to the build.
      . Add sincos.3 documentation.
      . Add appropriate MLINKS.

    * lib/msun/Symbol.map:
      . Expose sincos[fl] symbols in dynamic libm.so.

    * lib/msun/man/sincos.3:
      . Documentation for sincos[fl].

    * lib/msun/src/k_sincos.h:
      . Kernel for sincos() function.  This merges the individual kernels
        for sin() and cos().  The merger offered an opportunity to re-arrange
        the individual kernels for better performance.

    * lib/msun/src/k_sincosf.h:
       . Kernel for sincosf() function.  This merges the individual kernels
         for sinf() and cosf(). The merger offered an opportunity to re-arrange
         the individual kernels for better performance.

    * lib/msun/src/k_sincosl.h:
       . Kernel for sincosl() function.  This merges the individual kernels
         for sinl() and cosl(). The merger offered an opportunity to re-arrange
         the individual kernels for better performance.

    * lib/msun/src/math.h:
      . Add prototytpes for sincos[fl]().

    * lib/msun/src/math_private.h:
      . Add RETURNV macros.  This is needed to reset fpsetprec on I386
        hardware for a function with type void.

    * lib/msun/src/s_sincos.c:
      . Implementation of sincos() where sin() and cos() were merged into
        one routine and possibly re-arranged for better performance.

    * lib/msun/src/s_sincosf.c:
      . Implementation of sincosf() where sinf() and cosf() were merged into
        one routine and possibly re-arranged for better performance.

    * lib/msun/src/s_sincosl.c:
      . Implementation of sincosl() where sinl() and cosl() were merged into
        one routine and possibly re-arranged for better performance.

    PR:		215977, 218300
    Submitted by:	Steven G. Kargl <sgk@troutmask.apl.washington.edu>
    Differential Revision:	https://reviews.freebsd.org/D10765

  MFC r321457 (by ngie):

    Mark :reduction as an expected failure

    It fails with clang 5.0+.

    PR:	220989
    Reported by:	Jenkins

  MFC r322418 (by rlibby):

    lib/msun: avoid referring to broken LDBL_MAX

    LDBL_MAX is broken on i386:
    https://lists.freebsd.org/pipermail/freebsd-numerics/2012-September/000288.html

    Gcc has produced +Infinity for LDBL_MAX on i386 and amd64 with -m32
    for some time, and newer versions of gcc are now warning that the
    "floating constant exceeds range of 'long double'".  Avoid this by
    referring to half the value of LDBL_MAX instead.

    Reviewed by:	bde
    Approved by:	markj (mentor)
    Sponsored by:	Dell EMC Isilon

  MFC r322435 (by rlibby):

    Revert r322418, LDBL_MAX_EXP unsuitable for macro pasting on some arches

    Either need a different way to spell HALF_LDBL_MAX, or a different way
    to spell LDBL_MAX_EXP, or a different approach.

    Reported by:	ian

  MFC r322921 (by ngie):

    Revert r321457

    It doesn't fail after ^/head@r322855 (the releng_50 clang merge).

    PR:	220989

Changes:
_U  stable/11/
  stable/11/lib/msun/Makefile
  stable/11/lib/msun/Symbol.map
  stable/11/lib/msun/amd64/Makefile.inc
  stable/11/lib/msun/amd64/e_fmod.S
  stable/11/lib/msun/amd64/e_fmodf.S
  stable/11/lib/msun/amd64/e_fmodl.S
  stable/11/lib/msun/i387/Makefile.inc
  stable/11/lib/msun/i387/e_fmodf.S
  stable/11/lib/msun/i387/e_fmodl.S
  stable/11/lib/msun/ld80/e_lgammal_r.c
  stable/11/lib/msun/ld80/k_expl.h
  stable/11/lib/msun/ld80/s_logl.c
  stable/11/lib/msun/man/cacos.3
  stable/11/lib/msun/man/sincos.3
  stable/11/lib/msun/src/catrig.c
  stable/11/lib/msun/src/catrigl.c
  stable/11/lib/msun/src/e_asin.c
  stable/11/lib/msun/src/e_coshl.c
  stable/11/lib/msun/src/e_lgammaf_r.c
  stable/11/lib/msun/src/e_sinhl.c
  stable/11/lib/msun/src/k_sincos.h
  stable/11/lib/msun/src/k_sincosf.h
  stable/11/lib/msun/src/k_sincosl.h
  stable/11/lib/msun/src/math.h
  stable/11/lib/msun/src/math_private.h
  stable/11/lib/msun/src/s_fabs.c
  stable/11/lib/msun/src/s_fmax.c
  stable/11/lib/msun/src/s_fmin.c
  stable/11/lib/msun/src/s_logbl.c
  stable/11/lib/msun/src/s_scalbn.c
  stable/11/lib/msun/src/s_scalbnf.c
  stable/11/lib/msun/src/s_scalbnl.c
  stable/11/lib/msun/src/s_sincos.c
  stable/11/lib/msun/src/s_sincosf.c
  stable/11/lib/msun/src/s_sincosl.c
  stable/11/lib/msun/src/s_tanhl.c
  stable/11/lib/msun/tests/ctrig_test.c
  stable/11/sys/sys/param.h